expert filter can reference another expert filter : cyclic filter detection while evaluating filters